<resources>
    <string name="app_name">Road To Recycle</string>
    <string name="please_enter_zip_code">Please Enter Zip Code</string>
    <string name="please_enter_your_zip_code">Please Enter Your Zip Code </string>
    <string name="done">Enter</string>
    <string name="enter_an_item">Enter an Item</string>
    <string name="browse_by_category">Browse by Category</string>
    <string name="curb_text">This item is recyclable curbside in</string>
    <string name="curb_text_not">This item is not recyclable curbside in</string>
    <string name="near_by">Nearby recycling places that accept this item</string>
    <string name="back_home">Home</string>
    <string name="additional_info">Additional information: </string>
    <string name="call">or call at</string>
    <string name="special_yes">Special Instruction for this item :</string>
    <string name="special_no">There are no special instruction to recycle this item.</string>
    <string name="search">Search</string>
    <string name="open_hours">Open Hours</string>
    <!--Permissions Strings-->
    <string name="alert_pre">To use this feature, allow access</string>
    <string name="alert_post">It is essential</string>
    <string name="toast_pre">To use this feature, you must first allow access</string>
    <string name="toast_post">Give in the settings</string>
    <string name="READ_EXTERNAL_STORAGE">Read the memory card</string>
    <string name="WRITE_EXTERNAL_STORAGE">Write a memory card</string>
    <string name="SEND_SMS">Send a short message</string>
    <string name="RECEIVE_SMS">Receive SMS</string>
    <string name="GET_ACCOUNTS">Getting user accounts</string>
    <string name="ACCESS_FINE_LOCATION">Access to precise location</string>
    <string name="ACCESS_COARSE_LOCATION">Access to coarse Location</string>
    <string name="RECORD_AUDIO">voice recording</string>
    <string name="READ_PHONE_STATE">Read phone status</string>
    <string name="CALL_PHONE">Contact</string>
    <string name="READ_CALL_LOG">Read call logs</string>
    <string name="WRITE_CALL_LOG">Write Call Logs</string>
    <string name="CAMERA">Camera</string>
    <string name="READ_CONTACTS">Read contact</string>
    <string name="WRITE_CONTACTS">Write contact</string>
    <string name="READ_CALENDAR">Read calendar</string>
    <string name="WRITE_CALENDAR">Write calendar</string>
    <string name="select_cat">Please Select Category</string>
    <string name="go">Go</string>
    <string name="external_storage_error">No External Storage found.</string>
    <string name="app_text">© 2018 Tejas Ambravan. All rights reserved. May not be used or reproduced without permission by owner.</string>
    <string name="get_started">Get Started!</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="submit_text">This app does not yet include your zipcode. Would you like to send a request to the admin to speed up the process of including your area?</string>
    <string name="support_request">Zipcode Add Request!</string>
</resources>
