<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_common_5"
            android:paddingRight="@dimen/padding_common_16"
            android:paddingTop="@dimen/padding_common_5"
            android:weightSum="1">

            <Button
                android:id="@+id/enterBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_common_10"
                android:background="@drawable/rounded_btn"
                android:gravity="center"
                android:padding="@dimen/padding_common_10"
                android:text="@string/back_home"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_common_18" />


            <Button
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_btn"
                android:gravity="center"
                android:padding="@dimen/padding_common_10"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_common_18" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="@dimen/margin_common_5"
        android:layout_marginTop="@dimen/margin_common_5"
        android:background="@color/darkerGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_common_10"
        android:paddingRight="@dimen/padding_common_10">

        <TextView
            android:id="@+id/subCatName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_common_30"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/curbStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_common_20"
            android:gravity="center"
            android:text="@string/curb_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_common_20" />

        <TextView
            android:id="@+id/zipCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="xxxxxx"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_common_20" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_common_5"
            android:text="@string/near_by"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_common_18" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_common_2"
                android:layout_marginTop="@dimen/margin_common_8"
                android:background="@color/black" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/placesRecycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/view1"
                android:layout_below="@+id/view"
                android:background="@color/white" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_above="@+id/specialInstruct"
                android:layout_marginBottom="@dimen/margin_common_2"
                android:layout_marginTop="@dimen/margin_common_8"
                android:background="@color/black" />

            <TextView
                android:id="@+id/specialInstruct"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:padding="@dimen/padding_common_8"
                android:scrollbars="vertical"
                android:text="@string/special_no"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_common_18" />


        </RelativeLayout>

    </LinearLayout>

</LinearLayout>