<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_common_5"
    android:orientation="vertical"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_common_5"
        android:paddingLeft="@dimen/padding_common_10"
        android:paddingRight="@dimen/padding_common_10"
        android:paddingTop="@dimen/padding_common_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:id="@+id/centerNameAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_common_10"
                android:layout_weight=".9"
                android:text=""
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/mapRedirect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:background="@null"
                android:src="@mipmap/navigation" />
        </LinearLayout>

        <TextView
            android:id="@+id/centerHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_common_5"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_common_5"
            android:text="@string/additional_info"
            android:textColor="@color/black" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_common_5"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/centerUrl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:textColor="@color/bgBlue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call"
                    android:visibility="gone"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/centerPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="phone"
                    android:text="dsffsfdffdasfds"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_common_5"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_common_5"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/openingHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/distance"
                android:paddingTop="@dimen/padding_common_5"
                android:text="@string/open_hours"
                android:textColor="@color/bgBlue"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/openingRecycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:visibility="gone" />

    </LinearLayout>
</android.support.v7.widget.CardView>